Modificando la direccion de buquedas
Modificando la direccion de buquedas

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- META TAGS PARA WHATSAPP PREVIEW -->
     <meta property="og:title" content="Invitación Festejo Navideño">
     <meta property="og:description" content="Su dedicación es la base de nuestro éxito, y esta velada es un pequeño gesto de agradecimiento por todo su compromiso.">
-    <meta property="og:image" content="https://expertcellcorp.github.io/invitacion/logonavidad.png">
-    <meta property="og:url" content="https://expertcellcorp.github.io/invitacion/">
+    <meta property="og:image" content="https://expertcellcorp.github.io/invitacioncc/logonavidad.png">
+    <meta property="og:url" content="https://expertcellcorp.github.io/invitacioncc/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     
